--- a/style.css
+++ b/style.css
@@ -65,9 +65,6 @@ h1{
     color: rgb(11, 70, 11);
 }
 
-#main-paragraph{
-
-}
 
 #footer-box{
     background-image: url(./imgs/footer_background.jpg);
@@ -79,11 +76,19 @@ h1{
     bottom: 0px;
     left: 0px;
     right: 0px;
-
     background-color:rgb(165, 112, 42);
-    color: white;
+    color: rgb(255, 255, 255);
     padding: 10px;
+    display: flow-root; 
 
+        
 }
 
+.footer-textbox{
+
+    padding: 5px;
+    border: solid 1px rgba(255, 255, 255, 0.267);
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.377);
+}
 
