--- a/style.css
+++ b/style.css
@@ -1,36 +1,45 @@
+html{
+    font-size: 16px;
+}
 
 body{
-    margin: 0px;
+    font-size: 1.5rem;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-#header-box{
+header{
 
     text-align: center;
-    background-color: beige;
     background-image:url(./imgs/header_background.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    padding: 50px;
-    margin: 0px;
+    
 }
+
 h1{
     color: white;
-    font-size: 500%;
+    font-size: 4rem;
     letter-spacing:6px;
+}
+
+h2{
+    color: rgb(11, 70, 11);
+    font-size: 1.5rem;
 }
 
 /*Navigacios elemek*/
 
-.nav-bar{
+.navbar{
     background-color: rgb(165, 112, 42);
-    overflow: hidden;
 }
 
-.nav-item{
+.navbar ul{
     list-style:none;
-    float: left;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 15px;
 }
 
 .nav-button{
@@ -38,6 +47,7 @@ h1{
     color: white;
     text-decoration: none;
     padding: 5px;
+
 }
 
 .nav-button:hover{
@@ -48,47 +58,42 @@ h1{
 #main-box{
    margin: 15px;
    border-radius: 5px;
-   border: solid 1px rgb(165, 112, 42);
    display: flow-root; /* hogy minden kep benne maradjon a dobozba*/
 }
 
 #main-img{
-
     margin: 25px;
-    max-height: 250px;
-    max-width: 150px;
     float: left;
-   
+    width: 40%;
+    max-width: 250px; 
 }
 
-#main-header{
-    color: rgb(11, 70, 11);
-}
 
+.container ul{
+    font-size: 1.5rem;
+    text-align: center;
+}
 
 #footer-box{
     background-image: url(./imgs/footer_background.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size:cover;
-
-    position: fixed;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
     background-color:rgb(165, 112, 42);
     color: rgb(255, 255, 255);
     padding: 10px;
-    display: flow-root; 
-
-        
+    display: flow-root;        
 }
 
 .footer-textbox{
-
     padding: 5px;
-    border: solid 1px rgba(255, 255, 255, 0.267);
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.377);
 }
+
+
+    
+
+
+
 
