--- a/style.css
+++ b/style.css
@@ -13,8 +13,15 @@ body{
 }
 
 .row{
+    margin:5 auto;
+    padding: 1;
     border: solid 1px black;
+}
 
+.col{
+    margin:5 auto;
+    padding: 1;
+    border: solid 1px black;
 }
 
 
@@ -50,6 +57,7 @@ h2{
     margin: 0;
     list-style:none;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     padding: 15px;
 }
@@ -66,18 +74,32 @@ h2{
 }
 
 /* Main elemek*/
-#main-box{
-   margin: 15px;
-   border-radius: 5px;
-   display: flow-root; /* hogy minden kep benne maradjon a dobozba*/
+
+.column{
+    display: flex;
+    justify-content: space-around;
 }
 
-#main-img{
-    margin: 25px;
-    float: left;
-    width: 40%;
-    max-width: 250px; 
+.col-1{
+    text-align: center;
+    width: 55%;
+    padding: 5px;
 }
+
+.col-2{
+    text-align: center;
+    width: 40%;
+    padding: 5px;
+}
+
+img{
+    margin: 10px;
+    min-width: 30%;
+    max-width: 30%;
+    float: left;
+}
+
+
 
 
 
