--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header h1{
     margin: 0;
     padding: 3px;
     color: white;
-    font-size: 4rem;
+    font-size: 3rem;
     letter-spacing:6px;
 }
 
@@ -127,6 +127,14 @@ img{
 }
 
 @media (max-width:600px) {
+    body{
+        font-size: 1rem;
+    }
+
+    h2{
+       font-size: 1rem;
+    }
+
     .column{
         flex-direction: column;
         justify-content: space-around;
