--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-
+/*LAYOUT*/
 .container{
     display: flex;
     flex-direction: column;
@@ -32,17 +32,31 @@ body{
 }
 
 header h1{
-    margin: 0;
-    padding: 3px;
+   
     color: white;
     font-size: 3rem;
+    font-weight: 800;
     letter-spacing:6px;
+    /* top-left-bottom-right*/
+    padding: 1em 1em 0 1em;
+    margin: 0;
+}
+
+.subtitle{
+    color: white;
+    font-size:1.5rem;
+    font-weight: 700;
+    padding-bottom:1em;
+    margin: 0;
+
 }
 
 h2{
     color: rgb(11, 70, 11);
     font-size: 1.5rem;
 }
+
+
 
 span{
     font-size: 2rem;
@@ -52,7 +66,7 @@ span{
 /*Navigacios elemek*/
 
 .navbar{
-    background-color: rgb(165, 112, 42);
+    background-color: rgba(165, 112, 42, 0.76);
 }
 
 .navbar ul{
@@ -65,14 +79,17 @@ span{
 }
 
 .nav-button{
-    background-color: rgb(165, 112, 42);
-    color: white;
+    background-color: rgba(165, 112, 42, 0.233);
+    color: rgb(241, 233, 223);;
     text-decoration: none;
-    padding: 5px;
+    padding: 0px 5px 0px 5px;
 }
 
 .nav-button:hover{
-    color:rgb(224, 207, 185);
+    color:white;
+    border-bottom: 1px solid white;
+    border-bottom-width: 2px;
+
 }
 
 /* Main elemek*/
@@ -103,7 +120,7 @@ span{
 
 img{
     margin: 10px;
-    max-width: 50%;
+    max-width: 25%;
     float: left;
 }
 
@@ -128,11 +145,11 @@ img{
 
 @media (max-width:600px) {
     body{
-        font-size: 1rem;
+        font-size: 1.5rem;
     }
 
     h2{
-       font-size: 1rem;
+       font-size: 1.5rem;
     }
 
     .column{
