problems solved in css: forge to delete some rows outside the selector

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ img{
     color: rgb(255, 255, 255);
     padding: 10px;
     display: flow-root;        
-}rgb(39, 27, 10)
+}
 
 .footer-textbox{
     padding: 5px;
