trying out new mini navigation to see if on mobile is better

--- a/style.css
+++ b/style.css
@@ -169,6 +169,13 @@ footer span{
     .navbar{
         background-color: rgba(255, 255, 255, 0);
     }
+    .navbar ul{
+        margin: 0;
+        padding-left: 1em;
+        list-style:none;
+        flex-direction: column;
+        align-items: flex-end;
+    }
 
     .nav-button{
         background-color: rgba(255, 255, 255, 0);
