--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ footer span{
         padding-left: 1em;
         list-style:none;
         flex-direction: column;
-        align-items: flex-end;
+        align-items: center;
     }
 
     .nav-button{
